Fix firefox bug with text overflow

--- a/sonar-server/src/main/webapp/stylesheets/navigator.less
+++ b/sonar-server/src/main/webapp/stylesheets/navigator.less
@@ -190,6 +190,10 @@
     & > span {
       display: inline-block;
       vertical-align: top;
+      width: 90%;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 
